# claude-slack

./: .gitignore  README.md  pyproject.toml
claude_slack/: __init__.py  __main__.py  claude_proc.py  client_shim.py  clipboard.py  config.py  daemon.py  interactive.py  redact.py  sessions.py  shim.py  slack_render.py  views.py  wizard.py
router/: README.md  __init__.py  __main__.py  audit.py  config.py  protocol.py  queue.py  server.py  wizard.py
