[project]
name = "claude-slack"
version = "0.1.0"
description = "Slack bridge for Claude Code: thread-per-session, interactive UI mapping"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "claude-agent-sdk>=0.2.82",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "slack-bolt>=1.28.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
claude-slack = "claude_slack.__main__:main"
claude-slack-router = "router.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_slack", "router"]
